<resources>
    <string name="app_name">Oxi_Gen</string>
    <string name="emergency_contacts">EMERGENCY CONTACTS</string>
    <string name="enter_contact_1">ENTER CONTACT 1</string>
    <string name="enter_contact_2">ENTER CONTACT 2</string>
    <string name="enter_contact_3">ENTER CONTACT 3</string>
    <string name="enter_contact_4">ENTER CONTACT 4</string>
    <string name="enter_contact_5">ENTER CONTACT 5</string>
    <string name="load_contacts">LOAD CONTACTS</string>
    <string name="splash">splash</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sos_contacts">SOS CONTACTS</string>
    <string name="welcomeMessage">Hi, I am OXI_GEN, your SOS MESSENGER. Please configure your message list.If done I AM
        READY, YOU CAN CALL ME AT ANY TIME! CLICK ON THE PINK FLOATING BUTTON TO ACTIVATE ME!
    </string>
</resources>
