<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
                                       android:layout_height="70sp"
                                       android:background="@android:color/black">
        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                  android:textColor="@android:color/white"
                  android:layout_marginTop="12sp"
                  android:textAlignment="center"
                  android:textSize="30sp"
                  android:text="@string/emergency_contacts"/>

    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="30sp"
                    android:hint="@string/enter_contact_1"
                    android:ems="10"
                    android:id="@+id/contact1" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="30sp"
                    android:hint="@string/enter_contact_2"
                    android:ems="10"
                    android:id="@+id/contact2" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="30sp"
                    android:hint="@string/enter_contact_3"
                    android:ems="10"
                    android:id="@+id/contact3" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="30sp"
                    android:hint="@string/enter_contact_4"
                    android:ems="10"
                    android:id="@id/contact4" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="30sp"
                    android:hint="@string/enter_contact_5"
                    android:ems="10"
                    android:id="@+id/contact5" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
            <Button android:layout_width="wrap_content"
                    android:layout_marginTop="30sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/bncr" android:layout_height="wrap_content"
                    android:text="@string/load_contacts"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>